test/expressions/complexOrderedCompareErrors.compareParam.good
complexOrderedCompareErrors.chpl:16: error: ordered comparison of complex numbers is not supported
